fixed the form a bit-not responsive yet. and not pretty

--- a/code/style.css
+++ b/code/style.css
@@ -1,10 +1,13 @@
-*, *::before, *::after {box-sizing: border-box;}
+*, *::before, *::after {
+  box-sizing: border-box;
+}
 
 body {
   font-family: 'Roboto Slab', serif;
   background-color: #f1e8e0;
 }
-header{
+
+header {
   text-align: center;
   font-family: 'Roboto Slab', serif;
 }
@@ -54,44 +57,71 @@ header p {
   color: white;
 }
 
-.hero-banner img{
+.hero-banner img {
   width: 100%;
   height: auto;
 }
 
-.question + .answer {
+.question+.answer {
   display: none;
-
 }
 
 .answer {
   display: block;
 }
 
+.order-form p {
+  margin-bottom: 40px;
+}
+
 .form {
+  margin-top: 50px;
   display: flex;
   flex-direction: column;
 }
 
 .form-group {
-  margin-bottom: 15px;
+  margin-bottom: 30px;
   display: flex;
   align-items: center;
+  flex-direction: column;
+
+}
+
+.row-buttons {
+  flex-direction: row;
+}
+
+.form-group label {
+  margin: 10px;
 }
 
 .navbar.responsive {
   position: relative;
 }
+
 .navbar.responsive .icon {
   position: absolute;
   right: 0;
   top: 0;
 }
+
 .navbar.responsive a {
   float: none;
   display: block;
   text-align: left;
 }
+
+input[type="submit"] {
+  background-color: #690707;
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-decoration: none;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
 
 @media (min-width: 600px) {
   .navbar a {
@@ -101,13 +131,7 @@ header p {
     float: right;
     display: none;
   }
-
 }
-
-
-
-
-
 
 /*.active + .answer {
    some styling here 
